[Enhancement] Support Arrow (vectorized) input for Java UDFs (#75907)